--- a/client/src/Components/NavBar/style.css
+++ b/client/src/Components/NavBar/style.css
@@ -4,7 +4,7 @@
     --font-family: Arial, sans-serif;
   }
   
-  nav {
+  header {
     background-color: var(--primary-color);
     color: white;
     font-family: var(--font-family);
@@ -12,28 +12,34 @@
     justify-content: space-between;
     padding: 0.5rem;
   }
+
+  h1 a{
+    color:white;
+  }
   
-  nav ul {
+  nav {
+    align-items: center;
+    display: flex;
+}
+
+  ul{
     list-style: none;
     display: flex;
     align-items: center;
     margin: 0;
   }
   
-  nav li {
+  .mx-1 {
     margin-right: 1rem;
   }
   
-  nav li.right {
-    margin-left: auto;
-  }
   
-  nav a {
+  li a {
     color: white;
     text-decoration: none;
   }
   
-  nav button {
+  .mx-1 {
     background-color: var(--secondary-color);
     color: white;
     border: none;
@@ -42,41 +48,9 @@
     cursor: pointer;
   }
   
-  nav button:hover {
+  .mx-1:hover {
     background-color: #5a6268;
   }
   
-  .modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.4);
-  }
   
-  .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-  }
-  
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
+ 
