--- a/client/src/Pages/Learn/style.css
+++ b/client/src/Pages/Learn/style.css
@@ -12,12 +12,12 @@
   }
 
   .education-table th {
-    background-color: #f2f2f2;
+    background-color: # #007bff;
     font-weight: bold;
   }
 
   .education-table tbody tr:nth-child(even) {
-    background-color: #f2f2f2;
+    background-color:  #007bff;
   }
    
   
