--- a/client/src/Pages/Home/style.css
+++ b/client/src/Pages/Home/style.css
@@ -1,46 +1,50 @@
 section {
-    background-color: #FBB81A;
-    color: #0a1524;
-    padding: 2rem;
-    text-align: center;
-  }
-  
-  h1 {
-    font-size: 3rem;
-    margin-bottom: 2rem;
-  }
-  
+  background-color: rgba(255, 179, 0, 0.896);
+  color: #0a1524;
+  padding: 2rem;
+  text-align: center;
+}
+ h1 {
+  font-size: 3rem;
+  margin-bottom: 2rem;
+}
+ .flex-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.flex-row-item {
+  flex: 0;
+}
+
+p {
+  flex: 1;
+  font-size: 30px;
+  color: #2e323b
+}
+.main-text {
+  font-size: 3.2rem;
+  color: #0a1524;
+}
+ img {
+  order: 2;
+  width: 25%;
+}
+ @media (min-width: 768px) {
   .flex-row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+  flex-wrap: nowrap;
   }
-  
- p {
-    flex: 1;
-    font-size: 40px;
-    color:#0a1524
+  .flex-row-item {
+    flex-basis: 50%;
   }
-  .main-text {
-    font-size: 3.2rem;
-    color: #0a1524;
+   img {
+    order: 1;
+    width: 100%;
+    margin-bottom: 1rem;
   }
-  
-  img {
-    order: 2;
-    width: 50%;
-  }
-  
-  @media (max-width: 768px) {
-    .flex-row {
-      flex-direction: column;
-    }
-  
-    img {
-      order: 1;
-      width: 100%;
-      margin-bottom: 1rem;
-    }
-  }
-  
+}
+/* img {
+width: 50%;
+}  */
+
