--- a/client/src/Components/NavBar/style.css
+++ b/client/src/Components/NavBar/style.css
@@ -1,56 +1,55 @@
 :root {
-    --primary-color: #007bff;
-    --secondary-color: #6c757d;
-    --font-family: Arial, sans-serif;
-  }
-  
-  header {
-    background-color: var(--primary-color);
-    color: white;
-    font-family: var(--font-family);
-    display: flex;
-    justify-content: space-between;
-    padding: 0.5rem;
-  }
-
-  h1 a{
-    color:white;
-  }
-  
-  nav {
-    align-items: center;
-    display: flex;
+  --primary-color: black;
+  --secondary-color: #6c757d;
+  --font-family: Arial, sans-serif;
+}
+ header {
+  background-color: #2e323b;
+  color: #fcc642;
+  font-family: var(--font-family);
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem;
 }
 
-  ul{
-    list-style: none;
-    display: flex;
-    align-items: center;
-    margin: 0;
-  }
-  
-  .mx-1 {
-    margin-right: 1rem;
-  }
-  
-  
-  li a {
-    color: white;
-    text-decoration: none;
-  }
-  
-  .mx-1 {
-    background-color: var(--secondary-color);
-    color: white;
-    border: none;
-    padding: 0.5rem 1rem;
-    border-radius: 0.25rem;
-    cursor: pointer;
-  }
-  
-  .mx-1:hover {
-    background-color: #5a6268;
-  }
-  
-  
- 
+
+/* h1 a{
+  color:#fcc642;
+} */
+ nav {
+  align-items: center;
+  display: flex;
+}
+header .newbee {
+max-width: 20%;
+height: auto;
+
+
+}
+ul{
+  list-style: none;
+  display: flex;
+  align-items: center;
+  margin: 0;
+}
+ .mx-1 {
+  margin-right: 1rem;
+}
+
+li a {
+  color: white;
+  text-decoration: none;
+}
+ .mx-1 {
+  background-color: var(--secondary-color);
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  cursor: pointer;
+}
+ .mx-1:hover {
+  background-color: #5a6268;
+}
+
+
