--- a/client/src/Pages/Learn/style.css
+++ b/client/src/Pages/Learn/style.css
@@ -1,23 +1,26 @@
 .education-table {
-   
-    border-collapse: collapse;
-    width: 100%;
-    
-  }
+ 
+  border-collapse: collapse;
+  width: 100%;
+ 
+}
 
-  .education-table th, .education-table td {
-    text-align: left;
-    padding: 8px;
-    border-bottom: 1px solid #ddd;
-  }
 
-  .education-table th {
-    background-color: # #007bff;
-    font-weight: bold;
-  }
+.education-table th, .education-table td {
+  text-align: left;
+  padding: 8px;
+  border-bottom: 1px solid #ddd;
+}
 
-  .education-table tbody tr:nth-child(even) {
-    background-color:  #007bff;
-  }
-   
-  
+
+.education-table th {
+  background-color: #f2f2f2;
+  font-weight: bold;
+}
+
+
+.education-table tbody tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+
