--- a/client/src/Pages/Dashboard/Search/style.css
+++ b/client/src/Pages/Dashboard/Search/style.css
@@ -1,7 +1,7 @@
-.autocomplete {
+/* .autocomplete {
     position: relative;
     display: inline-block;
-  }
+  } */
   
   .autocomplete input {
     padding: 8px 16px;
@@ -9,10 +9,11 @@
     border: none;
     border-bottom: 2px solid #ccc;
     width: 100%;
-  }
+  } 
   
-  .dropdown-menu {
-    position: absolute;
+ .dropdown-menu {
+  /* display: flex; */
+    /* position: absolute; */
     z-index: 1;
     top: 100%;
     left: 0;
@@ -21,11 +22,21 @@
     max-height: 200px;
     overflow-y: scroll;
     background-color: #fff;
+  } 
+
+  .hidden {
+    display: none;
+  }
+
+  .show {
+    display: block;
   }
   
   .dropdown-item {
-    padding: 8px 16px;
+    padding: 1px 2px;
     font-size: 16px;
+    text-transform: uppercase;
+    transition: transform 2s ease-in;
   }
   
   .dropdown-item.active {
@@ -34,7 +45,7 @@
   }
   
   .dropdown-item:hover {
-    background-color: #f2f2f2;
+    background-color: lightgray;
     cursor: pointer;
   }
   
