adds pointer to dashboard

--- a/client/src/Pages/Dashboard/Data/style.css
+++ b/client/src/Pages/Dashboard/Data/style.css
@@ -22,6 +22,10 @@
     font-weight: bold;
   }
 
+  .financial-table td:first-child{
+    cursor: pointer;
+  }
+
   .financial-table th:not(:first-child) {
     text-transform: uppercase;
   }
