--- a/client/src/Pages/Learn/style.css
+++ b/client/src/Pages/Learn/style.css
@@ -1,10 +1,7 @@
 .education-table {
- 
   border-collapse: collapse;
   width: 100%;
- 
 }
-
 
 .education-table th, .education-table td {
   text-align: left;
@@ -14,13 +11,30 @@
 
 
 .education-table th {
-  background-color: #f2f2f2;
+  background-color: white;
   font-weight: bold;
 }
 
 
 .education-table tbody tr:nth-child(even) {
-  background-color: #f2f2f2;
+  background-color: white;
 }
 
+.education-table tbody tr:nth-child(odd) {
+  background-color: #dedcd1;
+}
 
+.education-table td:first-child {
+  text-transform: uppercase;
+font-weight: bold;  
+}
+
+.education-table th {
+  background-color: #f2f2f2;
+  font-weight: bold;
+  border: 1px solid black;
+}
+
+.education-table tbody tr:hover {
+  background-color: var(--accent);
+}
